# autograder-contrib

./: .gitignore  README.md  check_handgrading_submissions.py  clone_course.py  clone_project.py  create_course.py  export_project.py  generate.sh  get_result_output.py  import_project.py  list_ag_tests.py  main.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  sandbox_docker_image.py  setup.cfg  setup.py  utils.py
ag_contrib/: http_client.py  utils.py
ag_contrib/config/: init_project.py  models.py  save_project.py
clone/: clone_course.py  clone_project.py
src/ag_contrib/: __main__.py  http_client.py
src/ag_contrib/config/: init_project.py  models.py  save_project.py
